--- a/src/App.css
+++ b/src/App.css
@@ -175,19 +175,19 @@
     @apply flex flex-col items-center bg-black bg-opacity-10 backdrop-blur-sm shadow-lg shadow-[0_0px_5px_5px_rgba(0,0,0,0.3)] shadow-dark_green rounded-lg p-4 md:mx-20 md:p-16;
   }
   form h2 {
-    @apply  text-2xl md:text-4xl text-accent text-center font-bold mx-auto md:w-full w-3/4;
+    @apply  md:text-2xl md:text-4xl text-accent text-center font-bold mx-auto md:w-full w-3/4;
   }
   .form {
-    @apply flex   font-bold mx-auto p-4 mx-20  w-full flex-col space-y-4 md:w-1/2 md:flex-row items-center md:space-x-4 md:p-8 md:mx-40;
+    @apply flex   font-bold mx-auto p-4 mx-20  w-full flex-col space-y-4 md:space-y-0 md:w-full md:flex-row items-center md:space-x-4 md:p-8 md:mx-40;
   }
   .form-input {
     @apply bg-accent outline-none rounded-md border-secondary border-2 py-1.5 px-1 text-sm font-medium w-3/4;
   }
   form .primary-button {
-    @apply bg-secondary w-1/2;
+    @apply bg-secondary w-full;
   }
   form .primary-button:hover {
-    @apply bg-background w-1/2;
+    @apply bg-background w-full;
   }
 
   /* Footer */
